# todobot.be

./: .coveragerc  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  README.md  deploy.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: backend.yml
api/: urls.py
backend/management/commands/: seed.py
backend/models/: base.py
backend/services/: base.py
copilot/: .workspace
copilot/backend/: manifest.yml
copilot/celery/: manifest.yml
main/: celery.py  urls.py
main/services/: logger.py
main/settings/: defaults.py  docker.py  production.py
python_functions/: django_initializer.py
